--- a/WPFinterface/ucDBtblRemote.xaml
+++ b/WPFinterface/ucDBtblRemote.xaml
@@ -7,7 +7,8 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        <DataGrid x:Name="dgv_DBtable" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="Auto" Width="Auto" AutoGenerateColumns="True"/>
+        <DataGrid x:Name="dgv_DBtable" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" IsReadOnly="True"
+                  Height="Auto" Width="Auto" AutoGenerateColumns="True"/>
 
     </Grid>
 </UserControl>
