--- a/WPFinterface/App.xaml
+++ b/WPFinterface/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="WPFinterface.App"
+﻿<Application x:Class="SimatekExCnahger.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="MainWindow.xaml">
