--- a/WPFinterface/ucDBtblRemote.xaml
+++ b/WPFinterface/ucDBtblRemote.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="WPFinterface.ucDBtblRemote"
+﻿<UserControl x:Class="SimatekExCnahger.ucDBtblRemote"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:WPFinterface"
+             xmlns:local="clr-namespace:SimatekExCnahger"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
